--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,15 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true"
-android:orientation="vertical"
-android:gravity="center_vertical"
 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity2"
     tools:ignore="ScrollViewCount">
 
+
+<GridView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:numColumns="2"
+    android:id="@+id/smp"
+    />
+
+    <!--
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -143,7 +150,7 @@ android:layout_marginBottom="-7dp"
 
        </LinearLayout>
 
-
+-->
 
 
 </LinearLayout>
