--- a/app/src/main/res/layout/design_for_all.xml
+++ b/app/src/main/res/layout/design_for_all.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingTop="50dp"
-    tools:context=".AngleActivity">
-
-
+    android:orientation="vertical"
+    tools:context=".MainActivity2">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
         android:text="@string/from"
         android:textColor="@color/black"
@@ -29,7 +26,7 @@
         tools:ignore="UselessParent">
 
         <Spinner
-            android:id="@+id/angle_spnr"
+            android:id="@+id/spnr1"
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_marginStart="10dp"
@@ -41,14 +38,15 @@
             />
 
         <EditText
-            android:id="@+id/s_angle"
+            android:id="@+id/ed1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
-            android:text="@string/_1"
+            android:hint="@string/enter_units"
             android:inputType="numberDecimal"
-            tools:ignore="Autofill,LabelFor" />
+            android:text="@string/_1"
+            tools:ignore="Autofill" />
 
     </LinearLayout>
 
@@ -57,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="10dp"
         android:text="@string/to"
         android:textColor="@color/black"
@@ -66,15 +64,15 @@
 
         />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:orientation="horizontal"
         tools:ignore="UselessParent">
 
         <Spinner
-            android:id="@+id/angle_spnr2"
+            android:id="@+id/spnr2"
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_marginStart="10dp"
@@ -86,25 +84,27 @@
             />
 
         <EditText
-            android:id="@+id/s_angle2"
+            android:id="@+id/ed2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
-
-            android:inputType="none"
             android:editable="false"
+            android:hint="@string/enter_units"
+            android:inputType="none"
             android:text="@string/_1"
-            tools:ignore="Autofill,Deprecated,HardcodedText,LabelFor" />
+            tools:ignore="Autofill,Deprecated,HardcodedText" />
+
     </LinearLayout>
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/convert"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:onClick="angle_conv"
+        android:layout_marginTop="20dp"
+        android:text="@string/convert"
+
         />
 
 
